# tensor-viz

./: .gitignore  .readthedocs.yaml  AGENTS.md  README.md  SPEC.md  demo.py  package.json  pyproject.toml  tsconfig.base.json  typedoc.json
.githooks/: pre-commit
docs/: architecture.md  conf.py  index.md  install.md  python.md  requirements.txt  typescript.md  ui.md  usage.md
docs/reference/: python.md  typescript.md
python/src/tensor_viz/: __init__.py  bundle.py  server.py
python/src/tensor_viz.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python/tests/: test_docs_examples.py
tools/: sync-demo-assets.mjs  sync-linear-layout-examples.py
