[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tensor-viz"
version = "0.1.0"
description = "Standalone tensor viewer with a browser-based frontend."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26"
]

[project.optional-dependencies]
docs = [
  "myst-parser>=4,<6",
  "sphinx>=8.2,<10",
  "sphinx-design>=0.6,<1",
  "sphinx-rtd-theme>=3,<4",
]

[tool.setuptools]
package-dir = {"" = "python/src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["python/src"]

[tool.setuptools.package-data]
"tensor_viz" = ["static/**"]
